lab1/Test/L1-A-13-6.output
Error Type B at Line 7
Error Type A at Line 9
Error Type A at Line 11
Error Type A at Line 13
Error Type B at Line 15
Error Type B at Line 21
